k8s/attendee-resources/workshops/workshop-18/echo-deployment-v1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-v1
spec:
  selector:
    matchLabels:
      app: echo
      version: v1
  template:
    metadata:
      labels:
        app: echo
        version: v1
    spec:
      containers:
      - name: echo
        image: python:3
        args:
        - bash
        - -c
        - |
          python3 -c "$(cat <<EOF
          from http.server import BaseHTTPRequestHandler, HTTPServer

          hostName = "0.0.0.0"
          hostPort = 8080

          class Server(BaseHTTPRequestHandler):
              def do_GET(self):
                  self.send_response(200)
                  self.send_header("Content-type", "text/html")
                  self.end_headers()
                  self.wfile.write(bytes("$(MESSAGE)", "utf-8"))

          server = HTTPServer((hostName, hostPort), Server)
          server.serve_forever()
          EOF
          )"
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          exec:
            command: ["/usr/bin/curl", "localhost:8080"]
        livenessProbe:
          exec:
            command: ["/usr/bin/curl", "localhost:8080"]
          initialDelaySeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
