k8s/attendee-resources/workshops/workshop-18/echo-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  selector:
    app: echo
  ports:
  - name: http
    port: 80
    targetPort: 8080
